# cv_final_project

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.rst  JulieannaBacon_Report.ipynb  LICENSE  Makefile  Pipfile  README.md  Report.ipynb  mkdocs.yml  pyproject.toml
.github/workflows/: on-merge-to-main.yml  on-pull-request.yml  on-release-main.yml  testing.yml
docs/: Makefile  conf.py  data_downloading_overview.rst  final_project.rst  index.md  index.rst  modules.md  modules.rst  preprocessing_overview.rst  project_intro.rst  requirements.txt  salted.rst  tests.rst  training.rst
final_project/: __main__.py  cli.py  data_downloader.py  data_generator.py  local_target_class.py  models.py  preprocessing.py  preprocessing_utils.py  salted.py  training.py
final_project/conf/: aws_paths.yaml  local_paths.yaml  train_configs.yaml  train_inception.yaml
tests/: test_data_downloader.py  test_foo.py  test_preprocessing.py  test_salted.py
