[tool.poetry]
name = "final_project"
version = "0.0.1"
description = "Final project for sp2022"
authors = ["Julieanna Bacon <fjulieannabacon2014@gmail.com>"]
repository = "https://github.com/juliealgebra/final-project"
documentation = "https://juliealgebra.github.io/final-project/"
readme = "README.md"
packages = [
  {include = "final_project"}
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^7.1.1"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
mkdocstrings = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"
